# cv

./: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  env.sh
python/: Makefile  balltracker.py  calibrate_color.py  cmake_install.cmake  test.py  vkeybd.py
src/: CMakeLists.txt  CMakeLists.txt~  Makefile  aam_face.cc  cmake_install.cmake  facedetect.cc  train.cpp  vkeybd.cc  vkeybd.cc~  webcam.cc
third/: CMakeLists.txt  Makefile  cmake_install.cmake
third/aam/: AAM_Basic.cpp  AAM_Basic.h  AAM_CAM.cpp  AAM_CAM.h  AAM_IC.cpp  AAM_IC.h  AAM_MovieAVI.h  AAM_PAW.cpp  AAM_Shape.h  AAM_TDM.cpp  AAM_Util.cpp  AAM_Util.h  CMakeLists.txt  README  VJfacedetect.h
third/blobs/: CMakeLists.txt  CMakeLists.txt~  Makefile  blob.cc  blob.h  blob_contour.cc  blob_contour.h  blob_operators.cc  blob_operators.h  blob_result.cc  blob_result.h  cmake_install.cmake  component_labeling.cc  component_labeling.h
third/jboost-2.0/: build.xml  jboost
third/jboost-2.0/src/jboost/atree/: AlternatingTree.java  InstrumentedAlternatingTree.java
third/jboost-2.0/src/jboost/booster/: AdaBoost.java  RobustBoost.java
third/jboost-2.0/src/jboost/controller/: Controller.java
